--- a/Style.css
+++ b/Style.css
@@ -10,6 +10,41 @@
     font-size: 62.5%;
 }
 
+body{
+    font-family: var(--font-default);
+}
+
+.hamburger{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 2.4rem;
+    width: 2.4rem;
+    background-color: red;
+    position: fixed;
+    right: 1.5em;
+    top: 1.5rem;
+    z-index:10;
+}
+.linha{
+    height: .5rem;
+    width: 100%;
+    background-color: white;
+}
+
+.menu{
+    height: 100vh;
+    width: 20rem;
+    position: fixed;
+    right: -20rem;
+    background-color: white;
+    z-index:10;
+}
+
+.show-menu{
+    right:0;
+}
+
 header{
     height: 100vh;
     background-image: url('../Image/Hero.jpg');
@@ -32,7 +67,7 @@ span{
 
 .botao{
     padding: 1.4rem 11rem;
-    background: linear-gradient(90deg, #6A3093 0%, #A044FF, 100%)
+    background: linear-gradient(90deg, #6A3093 0%, #A044FF, 100%);
     border-radius: 10px;
 
 }
@@ -105,7 +140,8 @@ span{
 
 input[type="number"]{
     padding: .5rem;
+    
     background-color: #212121;
-    color: var(--color-default);
+    color: white;
     border: none;
 }
