--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -10,9 +10,44 @@
     font-size: 62.5%;
 }
 
+body{
+    font-family: var(--font-default);
+}
+
+.hamburger{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 2.4rem;
+    width: 2.4rem;
+    background-color: red;
+    position: fixed;
+    right: 1.5em;
+    top: 1.5rem;
+    z-index:10;
+}
+.linha{
+    height: .5rem;
+    width: 100%;
+    background-color: white;
+}
+
+.menu{
+    height: 100vh;
+    width: 20rem;
+    position: fixed;
+    right: -200px;
+    background-color: white;
+    z-index:10;
+}
+
+.show-menu{
+    right:0;
+}
+
 header{
     height: 100vh;
-    background-image: url('../images/Hero.jpg');
+    background-image: url('../Image/Hero.jpg');
     background-size: cover;
     color: #fff;
     padding: 21rem 11rem;
@@ -105,8 +140,8 @@ span{
 
 input[type="number"]{
     padding: .5rem;
+    
     background-color: #212121;
-    color: var(--color-default);
+    color: white;
     border: none;
-    border-radius: .3rem;
 }
