--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -94,6 +94,8 @@ span{
 .card:hover .card-info{
     opacity: 1;
     top: 150px;
+    color:var(--font-default);
+    z-index: 10;
 }
 
 .card-image img{
