--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -6,8 +6,17 @@
     box-sizing: border-box;
 }
 
+
 :root{
-    font-size: 62.5%;
+    font-size: 62.5%; /*10px / 16px */
+    --font-default: 'Montserrat';
+    --font-heading: 'Poppins';
+    --color-default: #FFF;
+    --color-secundary: #000;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 body{
@@ -20,16 +29,17 @@ body{
     justify-content: space-between;
     height: 2.4rem;
     width: 2.4rem;
-    background-color: red;
     position: fixed;
-    right: 1.5em;
-    top: 1.5rem;
-    z-index:10;
+    right: 2rem;
+    top: 2rem;
+    z-index: 11;
+    cursor: pointer;
 }
 .linha{
     height: .5rem;
     width: 100%;
     background-color: white;
+    box-shadow: 2px 2px 2px #000;
 }
 
 .menu{
@@ -38,18 +48,47 @@ body{
     position: fixed;
     right: -200px;
     background-color: white;
-    z-index:10;
+    z-index: 9;
+    transition:right 1s;
+    font-size:1.8rem;
 }
+
+.menu a{
+    text-decoration: none;
+    color: var(--color-secundary);
+}
+.menu a:hover{
+    color: #6A3093;
+}
+
+.menu ul{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 2rem;
+    gap: 1.6rem
+}
+
+.menu li{
+    list-style: none;
+}
+
+
 
 .show-menu{
     right:0;
 }
 
 header{
+    display: flex; 
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
     height: 100vh;
-    background-image: url('../Image/Hero.jpg');
+    background-image: url("../images/hero.jpg");
     background-size: cover;
-    color: #fff;
+    color:#FFFFFF;
     padding: 21rem 11rem;
 }
 
@@ -57,6 +96,15 @@ h1{
     font-family: 'poppins';
     font-weight: 900;
     font-size: 6rem;
+    margin-bottom: 1rem;
+}
+
+h2{
+    font-size: 4.4rem;
+}
+
+p{
+    font-size: 3rem;
 }
 
 span{
@@ -67,9 +115,41 @@ span{
 
 .botao{
     padding: 1.4rem 11rem;
-    background: linear-gradient(90deg, #6A3093 0%, #A044FF, 100%);
+    background: linear-gradient(90deg, #6A3093 0%, #A044FF 100%);
     border-radius: 10px;
+    font-size: 3rem;
+    color: #FFFFFF;
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    text-decoration: none;
+}
 
+section {
+    display: flex;
+    gap: 2rem;
+    padding: 8.6rem;
+}
+
+.avatar {
+    border-radius: 50%;
+    width: 300px;
+    height: 300px;
+    animation: zoom 10s ease-in-out;
+}
+
+@keyframes zoom{
+    0%{
+        transform: scale(1.3);
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+
+#texto-apresentacao{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
 }
 
 #secao-projetos{
@@ -81,6 +161,37 @@ span{
     justify-content: space-around;
     list-style: none;
 
+}
+#secao-projetos li{
+    list-style: none;
+    position: relative;
+    cursor: pointer;
+}
+
+#secao-projetos h3{
+    font-size: 3rem;
+    color:orange;
+}
+
+.card-image img{
+    width: 300px;
+    height: 400px;
+    border-radius: 10px;
+}
+
+.card-info{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0;
+    opacity: 0;
+    transition: opacity .5s, bottom .5s;
+    padding: 2rem;
+    gap: 1rem;
+}
+
+.card-info h4{
+    color: #c36eff;
 }
 
 .card{
@@ -96,19 +207,6 @@ span{
     top: 150px;
     color:var(--font-default);
     z-index: 10;
-}
-
-.card-image img{
-    height: 400px;
-    width: 300px;
-    border-radius: 10px;
-}
-
-.card-info{
-    position: absolute;
-    top: 0;
-    opacity: 0;
-    transition: opacity .7s ease-in-out, bottom .7s;
 }
 
 #secao-orcamento{
@@ -143,7 +241,8 @@ span{
 input[type="number"]{
     padding: .5rem;
     
-    background-color: #212121;
-    color: white;
+    background-color: #949494;
+    color: var(--color-default);
     border: none;
+    border-radius: .3rem;
 }
