--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -215,17 +215,17 @@ section {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color:black;
+    background-color: #212121;
 }
 
 #secao-orcamento form{
     display: grid;
-    grid-template-columns: 1fr auto;
+    grid-template-columns: repeat(2, 1fr);
     justify-items: start;
     row-gap: 1rem;
-    padding: 2rem;
-    background-color:#fff;
-    border: radius 10px;
+    padding: 4rem 2rem;
+    background-color: #FFF;
+    border-radius: 10px;
     position: relative;
     font-size: 1.6rem;
 }
@@ -244,9 +244,8 @@ section {
     border-radius: 5px;
 }
 
-input[type="number"]{
+input[type=number]{
     padding: .5rem;
-    
     background-color: #949494;
     color: var(--color-default);
     border: none;
